# racing_statistic

./: .clang-format  .clang-uml  CMakeLists.txt
noobsters-application/: CMakeLists.txt
noobsters-application/cmake/: FetchDependencies.cmake  Files.cmake  Variables.cmake
noobsters-application/include/: contender.h  contender_storage.h  ids.h
noobsters-application/include/core/: non_copyable.h  noobsters_filesystem.h  noobsters_logger.h  noobsters_macros.h  time_unit.h  vector_map.h
noobsters-application/include/event/: event_controller.h  event_handler.h  event_handler.hpp  racing_data_change_event.h
noobsters-application/src/core/: noobsters_filesystem.cpp  noobsters_logger.cpp  time_unit.cpp
noobsters-linux-application/: CMakeLists.txt
noobsters-linux-application/cmake/: Files.cmake  Variables.cmake
noobsters-linux-application/include/: config.h  config.h.in
noobsters-linux-application/include/controller/: main_window_controller.h
noobsters-linux-application/include/controllers/: main_window_controller.h
noobsters-linux-application/include/core/: constants.h  linux_application.h  linux_macros.h  resource_manager.h
noobsters-linux-application/include/model/: contender_model.h
noobsters-linux-application/include/view/: main_window_view.h
noobsters-linux-application/include/views/: main_window_view.h
noobsters-linux-application/include/windows/: main_window.h
noobsters-linux-application/resources/: main_menu.ui  org.noobsters.gresource.xml  racing_statistics.ui
noobsters-linux-application/src/: main.cpp
noobsters-linux-application/src/controller/: main_window_controller.cpp
noobsters-linux-application/src/controllers/: main_window_controller.cpp
noobsters-linux-application/src/core/: linux_application.cpp  resource_manager.cpp
noobsters-linux-application/src/model/: contender_model.cpp
noobsters-linux-application/src/view/: main_window_view.cpp
noobsters-linux-application/src/views/: main_window_view.cpp
noobsters-linux-application/src/windows/: main_window.cpp
noobsters-ui/: CMakeLists.txt
noobsters-ui/cmake/: Files.cmake  Variables.cmake
noobsters-ui/src/: main.cpp
